--- a/index.html
+++ b/index.html
@@ -10,63 +10,41 @@
 
 </head>
 <body>
-    <header class="cabecalho"
-    <img class="cabecalho-imagem" src="logocafe.png" alt="logocafe">
-    <nav class="cabecalho-menu"> 
-    <button class="conteudo-principal-botao"> Coffee Premium
+    <header class="header"
+    <img class="header-image" src="logocafe.png" alt="logocafe">
+    <nav class="header-menu"> 
+    <button class="content-button"> Coffee Premium
     </button>    
-    <a class="cabecalho-menu-item">Home</a>
-    <a class="cabecalho-menu-item">About</a>
-    <a class="cabecalho-menu-item">Contact</a>
+    <a class="header-menu-item">Home</a>
+    <a class="header-menu-item">About</a>
+    <a class="header-menu-item">Contact</a>
 
 
  </nav>
 </header>  
 
-<main class="conteudo">
-    <section class="conteudo-principal">
-        <div class="conteudo-principal-escrito">
-    <h1 class="conteudo-principal-escrito-titulo">Coffee Jacu Bird</h1>
+<main class="content">
+    <section class="content-main">
+        <div class="content-main-written">
+    <h1 class="content-main-written-title">Coffee Jacu Bird</h1>
         
         
     </div>
 
 <center>
-    <img class="conteudo-principal-imagem" src="backgroundcafe.png" alt="cafe" width="100%"</center>
+    <img class="content-main-image" src="backgroundcafe.png" alt="cafe" width="80%"</center>
 
 </section>
 
-<section class="conteudo-secundario">
-<h2 class="conteudo-secundario-titulo"><strong>HOME COFFEE</strong></h2>
+<section class="content-secondary">
+<h2 class="content-secondary-title"><strong>www.jacubird.com</strong></h2>
+<p class="content-secondary-paragraph"><strong>Delivery +1 (801) 300-6333</strong></p>
 
 
 </section>
-
-
-
-
-
 
 
 </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
