--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Café Jacu Bird</title>
+    <title class="button">Coffee Jacub Bird</title>
     <link rel="stylesheet" type="text/css" href="style.css"
 
 
@@ -32,14 +32,12 @@
     </div>
 
 <center>
-    <img class="content-main-image" src="backgroundcafe.png" alt="cafe" width="80%"</center>
-
+    <img class="content-main-image" src="background2.png" alt="cafe" width="80%"</center>
+    
 </section>
 
 <section class="content-secondary">
 <h2 class="content-secondary-title"><strong>www.jacubird.com</strong></h2>
-<p class="content-secondary-paragraph"><strong>Delivery +1 (801) 300-6333</strong></p>
-
 
 </section>
 
